--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "version": "0.1.0",
   "window": {
     "title": "NetEaseMusic",
-    "toolbar": true,
+    "toolbar": false,
     "frame": true,
     "width": 1014,
-    "height": 600
+    "height": 600,
+    "icon":"assets/img/icon.png"
   },
   "dependencies": {
     "async": "^0.9.0",
