--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "version": "1.1.0",
   "window": {
     "title": "NetEaseMusic",
-    "toolbar": false,
+    "toolbar": true,
     "frame": true,
     "width": 1122,
     "height": 600,
     "icon": "assets/img/icon.png"
   },
   "dependencies": {
+    "async": "^1.2.0",
     "av": "^0.4.4",
     "mp3": "^0.1.0",
     "speaker": "^0.2.5",
