--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "NetEaseMusic",
-  "main": "index.html",
+  "main": "dist/index.html",
   "version": "1.1.0",
   "window": {
     "title": "NetEaseMusic",
@@ -8,10 +8,16 @@
     "frame": true,
     "width": 1122,
     "height": 600,
-    "icon": "assets/img/icon.png"
+    "icon": "dist/assets/img/icon.png"
   },
   "dependencies": {
     "async": "^1.2.0",
     "superagent": "^1.2.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-concat": "^2.5.2",
+    "gulp-jade": "^1.0.1",
+    "gulp-stylus": "^2.0.5"
   }
 }
