--- a/package.json
+++ b/package.json
@@ -1,17 +1,38 @@
 {
-  "name": "NetEaseMusic",
+  "name": "nwMusicBox",
   "main": "dist/index.html",
-  "version": "1.1.0",
+  "version": "1.3.3",
   "window": {
     "title": "NetEaseMusic",
-    "toolbar": false,
+    "toolbar": true,
     "frame": true,
     "width": 1122,
     "height": 600,
     "icon": "dist/assets/img/icon.png"
   },
+  "platformOverrides": {
+    "windows": {
+      "window": {
+        "title": "网易音乐盒 for Windows",
+        "toolbar": false
+      }
+    },
+    "linux": {
+      "window": {
+        "title": "网易音乐盒 for Linux",
+        "toolbar": false
+      }
+    },
+    "osx": {
+      "window": {
+        "title": "网易音乐盒 for OsX",
+        "toolbar": false
+      }
+    }
+  },
   "dependencies": {
     "async": "^1.2.0",
+    "big-integer": "^1.5.5",
     "home": "^0.1.8",
     "superagent": "^1.2.0"
   },
@@ -22,6 +43,7 @@
     "gulp-jade": "^1.0.1",
     "gulp-stylus": "^2.0.5",
     "gulp-uglify": "^1.2.0",
+    "gulp-zip": "^3.0.2",
     "nw-builder": "^2.0.1"
   }
 }
