--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.3.3",
   "window": {
     "title": "NetEaseMusic",
-    "toolbar": true,
+    "toolbar": false,
     "frame": true,
     "width": 1200,
     "height": 600,
