--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "async": "^1.2.0",
     "big-integer": "^1.5.5",
     "home": "^0.1.8",
-    "superagent": "^1.2.0"
+    "superagent": "^1.2.0",
+    "titlebar": "^1.3.0"
   },
   "devDependencies": {
     "del": "^1.2.0",
