--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "Cube",
+  "name": "CubePlayer",
   "main": "dist/main.js",
   "version": "1.3.3",
   "dependencies": {
     "async": "^1.2.0",
     "big-integer": "^1.5.5",
-    "home": "^0.1.8",
+    "fs-plus": "^2.8.1",
     "superagent": "^1.2.0",
     "titlebar": "^1.3.0"
   },
