--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   },
   "devDependencies": {
     "del": "^1.2.0",
+    "eslint": "^1.3.1",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.5.2",
     "gulp-jade": "^1.0.1",
     "gulp-stylus": "^2.0.5",
     "gulp-uglify": "^1.2.0",
-    "gulp-zip": "^3.0.2",
-    "nw-builder": "^2.0.1"
+    "gulp-zip": "^3.0.2"
   }
 }
