--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "async": "^1.2.0",
     "big-integer": "^1.5.5",
     "fs-plus": "^2.8.1",
+    "react": "^0.13.3",
     "superagent": "^1.2.0",
     "titlebar": "^1.3.0"
   },
@@ -15,6 +16,7 @@
     "gulp": "^3.9.0",
     "gulp-concat": "^2.5.2",
     "gulp-jade": "^1.0.1",
+    "gulp-jsxtransform": "^0.1.1",
     "gulp-stylus": "^2.0.5",
     "gulp-uglify": "^1.2.0",
     "gulp-zip": "^3.0.2"
