--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "del": "^1.2.0",
     "eslint": "^1.3.1",
     "gulp": "^3.9.0",
+    "gulp-babel": "^5.2.1",
     "gulp-concat": "^2.5.2",
     "gulp-jade": "^1.0.1",
     "gulp-jsxtransform": "^0.1.1",
